--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgbb44055">
-<h2 id="orgbb44055">Navigation instructions</h2>
+<section id="slide-orgbd9229f">
+<h2 id="orgbd9229f">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgaa59426">
-<h2 id="orgaa59426">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org0955505">
+<h2 id="org0955505">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -103,8 +103,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org35436be" data-audio-src="python/">
-<h2 id="org35436be">Overview</h2>
+<section id="slide-org91d8f49" data-audio-src="python/">
+<h2 id="org91d8f49">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -187,16 +187,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-orgaff7d45" data-audio-src="python/title.mp3">
-<h3 id="orgaff7d45">Python</h3>
+<section id="slide-org0368a4f" data-audio-src="python/title.mp3">
+<h3 id="org0368a4f">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org71a5ad4">
-<h3 id="org71a5ad4">Jupyter notebooks</h3>
+<section id="slide-org8678ca6">
+<h3 id="org8678ca6">Jupyter notebooks</h3>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -232,24 +232,24 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org35604a3">
-<h3 id="org35604a3">binder</h3>
+<section id="slide-org186df01">
+<h3 id="org186df01">binder</h3>
 
 </section>
-<section id="slide-orga52a67f">
-<h3 id="orga52a67f">Google Colab</h3>
+<section id="slide-orgd6a5636">
+<h3 id="orgd6a5636">Google Colab</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org92782b8">
-<h2 id="org92782b8">Basics</h2>
-<div class="outline-text-2" id="text-org92782b8">
+<section id="slide-orgc898540">
+<h2 id="orgc898540">Basics</h2>
+<div class="outline-text-2" id="text-orgc898540">
 </div>
 </section>
-<section id="slide-orgb208668">
-<h3 id="orgb208668">Python as a calculator</h3>
+<section id="slide-orge1506f5">
+<h3 id="orge1506f5">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -264,8 +264,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-orgf8d0e34">
-<h3 id="orgf8d0e34">Example using variables</h3>
+<section id="slide-org0ce32c5">
+<h3 id="org0ce32c5">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -280,13 +280,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org115050b">
-<h3 id="org115050b">Variables: Numbers and strings</h3>
+<section id="slide-org3dd5c84">
+<h3 id="org3dd5c84">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org117c96f">
-<h3 id="org117c96f">Variables: Lists</h3>
+<section id="slide-org8fb2803">
+<h3 id="org8fb2803">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -294,15 +294,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org40756fc">
-<h3 id="org40756fc">Variables: Dictionaries</h3>
+<section id="slide-org0537bc8">
+<h3 id="org0537bc8">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-org3037533">
-<h3 id="org3037533">Example using dictionaries</h3>
+<section id="slide-org6bf8784">
+<h3 id="org6bf8784">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -310,37 +310,17 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org183b594">
-<h3 id="org183b594">More advanced use of dictionaries</h3>
+<section id="slide-org3123f87">
+<h3 id="org3123f87">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org05efcdd">
-<h3 id="org05efcdd">Dictionaries</h3>
-<div>
-Please see the
-<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
-Jupyter notebook
-</a>
-for more details.
-</div>
-
-<aside class="notes">
+<section id="slide-org880791a">
+<h3 id="org880791a">Functions</h3>
 <p>
-update
-x<sub>dict.update</sub>({'A':B})
+See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_functions.ipynb">colab</a>.
 </p>
 
-<p>
-comprehensions
-x<sub>dict</sub> = {k:k**2 for k in range(10)}
-</p>
-
-</aside>
-
-</section>
-<section id="slide-org588d204">
-<h3 id="org588d204">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -350,95 +330,17 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org0a652fe">
-<h3 id="org0a652fe">Conditionals</h3>
-<div>
-Please see the
-<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
-Jupyter notebook
-</a>
-for more details.
-</div>
-
-</section>
-<section id="slide-org1a86a55">
-<h3 id="org1a86a55">Heat capacity of ideal gases: Shomate equation</h3>
-<aside class="notes">
+<section id="slide-orge0c9ed2">
+<h3 id="orge0c9ed2">Conditionals</h3>
 <p>
-
+See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_conditionals.ipynb">colab</a>.
 </p>
-
-<p>
-<a href="../notebooks/shomate.ipynb">see notebook</a>
-</p>
-
-<p>
-Often, we encounter a situation when the actual code we need to
-execute depends on some condition.
-</p>
-
-<p>
-As an example, let's look at the heat capacity of nitrogen gas.
-</p>
-
-<ul>
-<li><a href="https://webbook.nist.gov/cgi/cbook.cgi?ID=C7727379&amp;Type=JANAFG&amp;Table=on#JANAFG">data for nitrogen</a></li>
-
-</ul>
-
-<p>
-As an example, the vapor pressure of a fluid is often reported using
-the Antoine equation with a set of specific values for the
-coefficients which depend on the particular fluid.  The value of these
-coefficients are typically only valid over a specific range of
-temperatures.
-</p>
-
-</aside>
-
-<div class="org-src-container">
-
-<pre  class="src src-python"><code trim>
-<span style="color: #00ffff;">def</span> <span style="color: #87cefa;">get_Cp</span>(T):
-
-    <span style="color: #00ffff;">if</span> (T &gt;= 100.0 <span style="color: #00ffff;">and</span> T &lt;= 500.0):
-        <span style="color: #eedd82;">A</span> =  28.98641
-        <span style="color: #eedd82;">B</span> =  1.853978
-        <span style="color: #eedd82;">C</span> = -9.647459
-        <span style="color: #eedd82;">D</span> =  16.63537
-        <span style="color: #eedd82;">E</span> =  0.000117
-    <span style="color: #00ffff;">elif</span> (T &gt; 500.0 <span style="color: #00ffff;">and</span> T &lt;= 2000.0):
-        <span style="color: #eedd82;">A</span> =  19.50583
-        <span style="color: #eedd82;">B</span> =  19.88705
-        <span style="color: #eedd82;">C</span> = -8.598535
-        <span style="color: #eedd82;">D</span> =  1.369784
-        <span style="color: #eedd82;">E</span> =  0.527601
-    <span style="color: #00ffff;">elif</span> (T &gt; 2000.0 <span style="color: #00ffff;">and</span> T &lt;= 6000.0):
-        <span style="color: #eedd82;">A</span> =  35.51872
-        <span style="color: #eedd82;">B</span> =  1.128728
-        <span style="color: #eedd82;">C</span> = -0.196103
-        <span style="color: #eedd82;">D</span> =  0.014662
-        <span style="color: #eedd82;">E</span> = -4.553760
-    <span style="color: #00ffff;">else</span>:
-        <span style="color: #00ffff;">print</span>(<span style="color: #ffa07a;">'error: Temperature out of range'</span>)
-        <span style="color: #7fffd4;">exit</span>()
-
-    <span style="color: #eedd82;">t</span> = T / 1000.0
-    <span style="color: #eedd82;">Cp</span> = A + B*t + C*t**2 + D*t**3 + E / t**2
-
-    <span style="color: #00ffff;">return</span> Cp
-
-<span style="color: #00ffff;">print</span>(get_Cp(5000.0))
-
-</code></pre>
-</div>
-
 
 </section>
 </section>
 <section>
-<section id="slide-org1fb3774">
-<h2 id="org1fb3774">Importing libraries</h2>
+<section id="slide-org7d3dcfe">
+<h2 id="org7d3dcfe">Importing libraries</h2>
 <ul>
 <li>Matplotlib</li>
 <li>Numpy</li>
@@ -462,8 +364,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-orge66c3cf">
-<h3 id="orge66c3cf">numpy</h3>
+<section id="slide-org7a2bff7">
+<h3 id="org7a2bff7">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -494,8 +396,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org2582282">
-<h3 id="org2582282">importing numpy</h3>
+<section id="slide-org1e622d3">
+<h3 id="org1e622d3">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -523,8 +425,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-org24d5afe">
-<h3 id="org24d5afe">matplotlib / pylab</h3>
+<section id="slide-org2f404f1">
+<h3 id="org2f404f1">matplotlib / pylab</h3>
 <ul>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
 <li>see the notebook</li>
@@ -551,8 +453,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgda9b8b7">
-<h3 id="orgda9b8b7">scipy</h3>
+<section id="slide-orgcceeb2d">
+<h3 id="orgcceeb2d">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -562,9 +464,10 @@ nil
 </ul>
 
 </section>
-<section id="slide-org895f34e">
-<h3 id="org895f34e">Examples of using <code>fsolve</code></h3>
+<section id="slide-orgef955df">
+<h3 id="orgef955df">Examples of using <code>fsolve</code></h3>
 <ul>
+<li>CP101: Example 7.5 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 2 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q2.ipynb">colab</a>)</li>
@@ -573,8 +476,8 @@ nil
 
 
 </section>
-<section id="slide-org700b51c">
-<h3 id="org700b51c">Sympy</h3>
+<section id="slide-org8fb29bf">
+<h3 id="org8fb29bf">Sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -592,27 +495,15 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgfa0ec70">
-<h3 id="orgfa0ec70">sympy</h3>
-<div class="org-src-container">
-
-<pre  class="src src-python"><code trim>
-<span style="color: #00ffff;">import</span> 
-
-</code></pre>
-</div>
-
-
-</section>
 </section>
 <section>
-<section id="slide-org90f9509">
-<h2 id="org90f9509">Further resources</h2>
-<div class="outline-text-2" id="text-org90f9509">
+<section id="slide-orgddd0e83">
+<h2 id="orgddd0e83">Further resources</h2>
+<div class="outline-text-2" id="text-orgddd0e83">
 </div>
 </section>
-<section id="slide-orga03db53">
-<h3 id="orga03db53">Installation</h3>
+<section id="slide-org5f77708">
+<h3 id="org5f77708">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -639,8 +530,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-org0955969">
-<h2 id="org0955969">Summary</h2>
+<section id="slide-orge1b4089">
+<h2 id="orge1b4089">Summary</h2>
 <aside class="notes">
 nil
 </aside>
